--- a/ch.jester.commonservices.api/plugin.xml
+++ b/ch.jester.commonservices.api/plugin.xml
@@ -3,5 +3,6 @@
 <plugin>
    <extension-point id="ImportHandler" name="ImportHandler" schema="schema/ImportHandler.exsd"/>
    <extension-point id="Filter" name="Filter" schema="schema/Filter.exsd"/>
+   <extension-point id="DataProvider" name="DataProvider" schema="schema/DataProvider.exsd"/>
 
 </plugin>
