--- a/ch.jester.common.test/plugin.xml
+++ b/ch.jester.common.test/plugin.xml
@@ -5,6 +5,7 @@
          point="ch.jester.commonservices.api.ImportHandler">
       <ImportHandler
             class="ch.jester.common.tests.testservice.DummyImportHandler"
+            id="dummy"
             shortType="*.xml"
             typeDescription="XML Importer">
       </ImportHandler>
