Deutsche Übersetzung ins Product eingetragen

--- a/ch.jester.rcpapplication/build.properties
+++ b/ch.jester.rcpapplication/build.properties
@@ -8,4 +8,5 @@ bin.includes = plugin.xml,\
                plugin_customization.ini,\
                jester.ico,\
                jester.icns,\
-               icon.xpm
+               icon.xpm,\
+               p2.inf
