Folder für die Spieler unter der Kategorie

--- a/ch.jester.ui.tournament/plugin.xml
+++ b/ch.jester.ui.tournament/plugin.xml
@@ -126,6 +126,9 @@
          <instanceof
                value="ch.jester.model.Pairing">
          </instanceof>
+         <instanceof
+               value="ch.jester.ui.tournament.cnf.TournamentContentProvider$PlayerFolder">
+         </instanceof>
 	      	</or>
 		  </possibleChildren>
 	   </navigatorContent>
