- ch.jester.common.ui.adapters --> LeerImplementationen von interfaces - Importer update

--- a/ch.jester.ui.importer/plugin.xml
+++ b/ch.jester.ui.importer/plugin.xml
@@ -10,8 +10,9 @@
       <wizard
             category="ch.jester.ui.importer.players"
             class="ch.jester.ui.ssbimporter.Wiz"
+            icon="icons/player_16x16.png"
             id="ch.jester.ui.ssbimporter"
-            name="Player Importer">
+            name="Player">
       </wizard>
    </extension>
 
