weiss nicht mehr :)

--- a/ch.jester.ui.importer/plugin.xml
+++ b/ch.jester.ui.importer/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.eclipse.ui.importWizards">
       <category
-            id="ch.jester.ui.importer.players"
+            id="ch.jester.player"
             name="Import Players">
       </category>
       <wizard
