--- a/ch.jester.ui.importer/plugin.xml
+++ b/ch.jester.ui.importer/plugin.xml
@@ -14,6 +14,12 @@
             id="ch.jester.ui.ssbimporter"
             name="Player">
       </wizard>
+      <wizard
+            class="ch.jester.ui.ssbimporter.Wiz"
+            icon="icons/icon16x16.png"
+            id="ch.jester.ui.jesterdataimporter"
+            name="Jester Data">
+      </wizard>
    </extension>
 
 </plugin>
