ReportEngine APIs und DefaultImpl

--- a/ch.jester.log4jproperies/src/log4j.properties
+++ b/ch.jester.log4jproperies/src/log4j.properties
@@ -8,8 +8,11 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss} %-2p %x - %m [%t - %c{1}]%n
 
-
+#jester
 log4j.logger.ch.jester=debug
 
 # hibernate
-log4j.logger.org.hibernate=info
+log4j.logger.org.hibernate=error
+
+#jasper
+log4j.logger.net.sf=info
