--- a/ch.jester.commonservices.impl/build.properties
+++ b/ch.jester.commonservices.impl/build.properties
@@ -5,5 +5,6 @@ bin.includes = META-INF/,\
                bin/,\
                plugin.xml,\
                OSGI-INF/IPingProvider.xml,\
-               OSGI-INF/IHTTPProxyAdapter.xml
+               OSGI-INF/IHTTPProxyAdapter.xml,\
+               OSGI-INF/ITempManager.impl.xml
 source.. = src/
