ReportEngine: Preference Page; von extern editierbare templates (werden ins workingdir installiert) IFileManager für TempFiles/Subfolders in WorkingDir/Copyfunktion etc.

--- a/ch.jester.reportengine.jasper.impl/build.properties
+++ b/ch.jester.reportengine.jasper.impl/build.properties
@@ -48,5 +48,6 @@ bin.includes = META-INF/,\
                lib/xercesImpl-2.7.0.jar,\
                lib/xml-apis-ext.jar,\
                lib/xml-apis.jar,\
-               OSGI-INF/component.xml
+               OSGI-INF/component.xml,\
+               plugin.xml
 source.. = src/
