--- a/trunk/ch.jester.commonservices.impl/build.properties
+++ b/trunk/ch.jester.commonservices.impl/build.properties
@@ -6,5 +6,6 @@ bin.includes = META-INF/,\
                plugin.xml,\
                OSGI-INF/IPingProvider.xml,\
                OSGI-INF/IHTTPProxyAdapter.xml,\
-               OSGI-INF/ITempManager.impl.xml
+               OSGI-INF/ITempManager.impl.xml,\
+               icons/
 source.. = src/
