--- a/trunk/ch.jester.reportengine.jasper.impl/build.properties
+++ b/trunk/ch.jester.reportengine.jasper.impl/build.properties
@@ -49,5 +49,8 @@ bin.includes = META-INF/,\
                lib/xml-apis-ext.jar,\
                lib/xml-apis.jar,\
                OSGI-INF/component.xml,\
-               plugin.xml
-source.. = src/
+               plugin.xml,\
+               reports/
+source.. = src/,\
+           reports/
+src.includes = reports/
