ReportEngine: Import von Templates und ContextMenu

--- a/ch.jester.reportengine.jasper.impl/build.properties
+++ b/ch.jester.reportengine.jasper.impl/build.properties
@@ -50,6 +50,7 @@ bin.includes = META-INF/,\
                lib/xml-apis.jar,\
                OSGI-INF/component.xml,\
                plugin.xml,\
-               reports/
+               reports/,\
+               icons/
 source.. = src/,\
            reports/
