--- a/ch.jester.ui.tournament/plugin.xml
+++ b/ch.jester.ui.tournament/plugin.xml
@@ -13,7 +13,7 @@
             class="ch.jester.ui.tournament.NewTournamentWizard"
             finalPerspective="ch.jester.rcpapplication.tournamentPerspective"
             hasPages="true"
-            icon="icons/tournament_16x16.gif"
+            icon="icons/tournament_add.png"
             id="ch.jester.ui.tournament.newTournament"
             name="%CreateNewTournament"
             preferredPerspectives="ch.jester.ui.tournament.tournamentPerspective">
@@ -29,7 +29,7 @@
             locationURI="menu:ch.jester.ui.add.pulldown">
          <command
                commandId="ch.jester.ui.tournament.newTournament"
-               icon="icons/tournament_16x16.gif"
+               icon="icons/tournament_add.png"
                label="%CreateNewTournament"
                style="push">
          </command>
@@ -39,6 +39,7 @@
             locationURI="popup:ch.jester.ui.tournament.cnf.popup?after=group.edit">
          <command
                commandId="org.eclipse.ui.edit.delete"
+               icon="icons/tournament_delete.png"
                id="cnf.popup.delete"
                label="%DeleteTournament"
                mnemonic="D"
@@ -52,7 +53,7 @@
          </command>
          <command
                commandId="cnf.popup.addPlayer"
-               icon="icons/player_add_16x16.png"
+               icon="icons/player_add.png"
                label="%AddPlayer"
                mnemonic="A"
                style="push"
@@ -60,7 +61,7 @@
          </command>
          <command
                commandId="ch.jester.ui.tournament.pairing"
-               icon="icons/categoryRunPairing_16x16.gif"
+               icon="icons/pairing_go.png"
                label="%RunPairing"
                style="push"
                tooltip="%TTrunPairing">
@@ -104,7 +105,7 @@
      <navigatorContent
            activeByDefault="true"
            contentProvider="ch.jester.ui.tournament.cnf.TournamentContentProvider"
-           icon="icons/tournament_16x16.gif"
+           icon="icons/tournament.png"
            id="ch.jester.ui.tournament.cnf.TournamentContent"
            labelProvider="ch.jester.ui.tournament.cnf.TournamentLabelProvider"
            name="Tournament content"
@@ -252,7 +253,7 @@
       <editor
             class="ch.jester.ui.tournament.editors.WirePlayerEditor"
             default="false"
-            icon="icons/player_add_16x16.png"
+            icon="icons/player_add.png"
             id="ch.jester.ui.tournament.wirePlayerEditor"
             name="%WirePlayerEditor">
       </editor>
