--- a/ch.jester.ui/plugin.xml
+++ b/ch.jester.ui/plugin.xml
@@ -6,14 +6,14 @@
       <view
             allowMultiple="false"
             class="ch.jester.ui.player.editor.view.PlayersView"
-            icon="icons/player_16x16.png"
+            icon="icons/player.png"
             id="ch.jester.ui.view.players"
             name="Players">
       </view>
       <view
             allowMultiple="false"
             class="ch.jester.ui.tournament.editor.view.TournamentView"
-            icon="icons/tournament_16x16.gif"
+            icon="icons/tournament.png"
             id="ch.jester.ui.view.tournamentview"
             name="Tournaments"
             restorable="true">
@@ -71,7 +71,7 @@
             locationURI="popup:ch.jester.ui.view.players">
          <command
                commandId="ch.jester.ui.addplayer"
-               icon="icons/player_add_16x16.png"
+               icon="icons/player_add.png"
                style="push">
          </command>
          <separator
@@ -226,7 +226,7 @@
             locationURI="menu:ch.jester.ui.add.pulldown">
          <command
                commandId="ch.jester.ui.addplayer"
-               icon="icons/player_add_16x16.png"
+               icon="icons/player_add.png"
                style="push">
          </command>
       </menuContribution>
@@ -254,6 +254,7 @@
       <editor
             class="ch.jester.ui.player.editor.PlayerEditor"
             default="false"
+            icon="icons/player_edit.png"
             id="ch.jester.ui.player.editor.PlayerEditor"
             name="PlayerEditor">
       </editor>
