Übersetzungen für den Turnier-Navigator, Handler für Turniereinstellungen (leerimpl.)

--- a/ch.jester.ui.tournament.nl1/plugin.properties
+++ b/ch.jester.ui.tournament.nl1/plugin.properties
@@ -2,3 +2,11 @@ NewTournament=New tournament
 TournamentPerspective=Tournament
 CreateNewTournament=Create a new tournament
 TournamentNavigator=Tournament Explorer
+DeleteTournament=Delete tournament
+AddPlayer=Add players
+TTaddPlayer=Add players to the category
+WirePlayerToCategoryDescr=Add players to the category
+RunPairing=Start pairing
+TTrunPairing=Start the pairing
+EditTournament=Tournament Settings
+TTEditTournament=Edit the tournament settings
