--- a/ch.jester.ui.tournament/plugin.xml
+++ b/ch.jester.ui.tournament/plugin.xml
@@ -46,12 +46,6 @@
                style="push">
          </command>
          <command
-               commandId="org.eclipse.ui.edit.rename"
-               id="cnf.popup.rename"
-               mnemonic="R"
-               style="push">
-         </command>
-         <command
                commandId="cnf.popup.addPlayer"
                icon="icons/player_add.png"
                label="%AddPlayer"
@@ -66,6 +60,13 @@
                style="push"
                tooltip="%TTrunPairing">
          </command>
+         <command
+               commandId="ch.jester.ui.tournament.edittournament"
+               icon="icons/settings.png"
+               label="%EditTournament"
+               style="push"
+               tooltip="%TTEditTournament">
+         </command>
       </menuContribution>
    </extension>
    <extension
@@ -76,10 +77,6 @@
             name="%CreateNewTournament">
       </command>
       <command
-            id="org.eclipse.ui.edit.rename"
-            name="%RenameTournament">
-      </command>
-      <command
             description="%WirePlayerToCategoryDescr"
             id="cnf.popup.addPlayer"
             name="%AddPlayer">
@@ -88,6 +85,11 @@
             description="%RunPairingDescr"
             id="ch.jester.ui.tournament.pairing"
             name="%RunPairing">
+      </command>
+      <command
+            description="%%EditTournamentDescr"
+            id="ch.jester.ui.tournament.edittournament"
+            name="%EditTournament">
       </command>
    </extension>
    <extension
@@ -168,20 +170,6 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            class="ch.jester.ui.tournament.handler.RenameTournamentHandler"
-            commandId="org.eclipse.ui.edit.rename">
-         <activeWhen>
-            <reference
-                  definitionId="ch.jester.ui.tournament.tournamentSelected">
-            </reference>
-         </activeWhen>
-         <enabledWhen>
-            <reference
-                  definitionId="ch.jester.ui.tournament.tournamentSelected">
-            </reference>
-         </enabledWhen>
-      </handler>
-      <handler
             class="ch.jester.ui.tournament.handler.AddPlayerHandler"
             commandId="cnf.popup.addPlayer">
          <activeWhen>
@@ -209,6 +197,15 @@
             </reference>
          </enabledWhen>
       </handler>
+      <handler
+            class="ch.jester.ui.tournament.handler.EditTournamentHandler"
+            commandId="ch.jester.ui.tournament.edittournament">
+         <activeWhen>
+            <reference
+                  definitionId="ch.jester.ui.tournament.tournamentSelected">
+            </reference>
+         </activeWhen>
+      </handler>
    </extension>
    <extension
          point="org.eclipse.core.expressions.definitions">
@@ -230,7 +227,7 @@
          <with
                variable="selection">
             <count
-                  value="+">
+                  value="1">
             </count>
          </with>
       </definition>
